tests/compile-fail/bad_include_literal.stderr
error: include array elements must be string literals
       help: use `include = ["file1.txt", "file2.txt"]`
  --> tests/compile-fail/bad_include_literal.rs:11:20
   |
11 | #[assay(include = [123])]
   |                    ^^^
